--- a/sites/site-1/files/package.json
+++ b/sites/site-1/files/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-remark-prismjs": "^2.0.4",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
+    "netlify-cms": "^1.9.3",
     "prismjs": "^1.15.0",
     "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2"
