--- a/sites/site-1/files/static/admin/config.yml
+++ b/sites/site-1/files/static/admin/config.yml
@@ -6,9 +6,18 @@ media_folder: static/assets
 public_folder: assets
 
 collections:
+  - name: pages
+    label: Pages
+    folder: content/pages
+    create: true
+    fields:
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
   - name: posts
     label: Posts
-    folder: posts
+    folder: content/posts
     create: true
     fields:
       - { name: path, label: Path }
